add settings to json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bible-commentary",
-  "homepage": "https://ivanm.github.io/BIBLE-COMMENTARY",
+  "homepage": "https://ivanm2706.github.io/BIBLE-COMMENTARY",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
